/*
 * $Id: ChangeLog,v 1.425 2002/10/06 02:00:25 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-10-06 14:22 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/rtl/cstr.prg
     + Added new function StrToVal( cString, cType )
     + Added new function StrToPrg( xVal )

   * contrib/xVisual/FormEdit.Prg
     * Using new StrToPrg in XFMReflection()

   * include/hbapi.h
     + Added extern PHB_FUNC hb_objGetMthd( PHB_ITEM pObject, PHB_SYMB pSymMsg, BOOL bAllowErrFunc );
   * source/vm/hvm.c
     * Changed hb_objGetMethod() to hb_objGetMthd()

   * source/vm/classes.c
     + Added new function __CLSMSGASSIGNED( nClassH, cMsg ) to return .F. if Message is Virtual or does not exist.

2002-10-05 23:00 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * source/rtl/tget.prg
    * Fixed small problem when using Mouse to select the editing get

2002-10-05 16:26 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbapi.h
  * source/vm/arrays.c
    + Added new hb_arrayGetByRef() - just like hb_arrayGet() but gets the item By Ref.

  * source/vm/hvm.c
    * Changed HB_P_ENUMERATE to use new hb_arrayGetByRef()
      /* Now FOR EACH enumrator can be assigned to and assignment will be reflected into the respective element. */

  * source/rtl/objfunc.prg
    + Added new __objGetValueDiff( oBase, oObject )
      Return 2 Dim Array of Properties and Values of just modified values, between the Base and the Object.

  * contrib/xVisual/FormEdit.Prg
  * contrib/xVisual/xInspect.prg
  * contrib/xVisual/xide.prg
    + Started XFM support.

2002-10-05 09:18 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/classes.c
    ! Fixed bug in __CLSDELMSG() Inline method, should be cleared but not deleted.

2002-10-05 01:57 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c